--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,10 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build
+
+# Xcode
+RNDigits.xcodeproj/xcuserdata/
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
