--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="co.fixt.react.native.digits" >
+  package="co.fixt.react.digits" >
   <meta-data
     android:name="io.fabric.ApiKey"
     android:value="${fabricApiKey}" />
