--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'io.fabric'
 
 repositories {
-    maven { url 'https://maven.fabric.io/public' }
+  maven { url 'https://maven.fabric.io/public' }
 }
 
 android {
   compileSdkVersion 23
-  buildToolsVersion "23.0.1"
+  buildToolsVersion "23.0.2"
 
   defaultConfig {
     minSdkVersion 16
@@ -38,8 +38,7 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile 'com.android.support:appcompat-v7:23.0.0'
   compile 'com.facebook.react:react-native:0.11.+'
-  compile('com.digits.sdk.android:digits:1.9.0@aar') {
-    transitive = true;
+  compile ('com.digits.sdk.android:digits:1.9.0@aar'){
+    transitive = true
   }
-
 }
