--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-digits",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "RNDigits",
   "keywords": [
     "react native",
     "react-native",
