--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "keywords": [
     "react native",
     "react-native",
+    "react-native-component",
+    "fabric",
+    "twitter",
+    "authentication",
     "digits"
   ]
 }
