--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ RNDigits.xcodeproj/xcuserdata/
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+.idea
+.DS_STORE
