change deps to peerDeps and update ranges

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "url": "https://github.com/fixt/react-native-digits/issues"
   },
   "homepage": "https://github.com/fixt/react-native-digits",
-  "dependencies": {
-    "react": "^15.0.2",
-    "react-native": "^0.26.0"
+  "peerDependencies": {
+    "react": "0.14.x || 15.x.x",
+    "react-native": ">=0.18.0 <=0.29.0"
   }
 }
